--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   },
   "homepage": "https://github.com/appsngen/appsngen-cli#readme",
   "dependencies": {
-    "commander": ">= 2.9.0"
+    "async-waterfall": "^0.1.5",
+    "commander": ">= 2.9.0",
+    "jsonfile": "^2.2.3",
+    "open": "0.0.5",
+    "request": "^2.69.0"
   }
 }
