[EPMPEXCH-15762] appsngen widget preview command implementation

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/appsngen/appsngen-cli#readme",
   "dependencies": {
+    "appsngen-dev-box": "^2.0.9",
     "async-waterfall": "^0.1.5",
     "commander": ">= 2.9.0",
+    "fs-extra": "^0.26.6",
     "jsonfile": "^2.2.3",
     "open": "0.0.5",
     "request": "^2.69.0",
