appsngen login command implementation

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "appsngen-dev-box": "^2.0.9",
     "async-waterfall": "^0.1.5",
+    "co": "^4.6.0",
+    "co-prompt": "^1.0.0",
     "commander": ">= 2.9.0",
     "fs-extra": "^0.26.6",
     "jsonfile": "^2.2.3",
