--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonfile": "^2.2.3",
     "open": "0.0.5",
     "request": "^2.69.0",
+    "rmdir": "^1.2.0",
     "semver": "^5.1.0"
   }
 }
