--- a/cli-config.json
+++ b/cli-config.json
@@ -1,4 +1,5 @@
 {
+    "serviceAddress": "https://www.appsngen.com",
     "dependencies": {
         "yo": ">= 1.7.0",
         "generator-appsngen-web-widget": ">= 0.3.2"
