--- a/cli-config.json
+++ b/cli-config.json
@@ -2,6 +2,7 @@
     "serviceAddress": "https://www.appsngen.com",
     "dependencies": {
         "yo": ">= 1.7.0",
-        "generator-appsngen-web-widget": ">= 0.3.2"
+        "generator-appsngen-web-widget": ">= 0.3.2",
+        "cordova": ">= 6.0.0"
     }
 }
