--- a/cli-config.json
+++ b/cli-config.json
@@ -4,5 +4,6 @@
         "yo": ">= 1.7.0",
         "generator-appsngen-web-widget": ">= 0.3.2",
         "cordova": ">= 6.0.0"
-    }
+    },
+    "credentials": null
 }
