--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "appsngen-dev-box": "^2.0.9",
     "async-waterfall": "^0.1.5",
     "commander": ">= 2.9.0",
+    "deasync": "^0.1.4",
     "fs-extra": "^0.26.6",
     "jsonfile": "^2.2.3",
     "open": "0.0.5",
     "readline-sync": "^1.4.1",
     "request": "^2.69.0",
     "rmdir": "^1.2.0",
-    "semver": "^5.1.0"
+    "semver": "^5.1.0",
+    "underscore": "^1.8.3"
   }
 }
