--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "appsngen-dev-box": "^2.0.9",
     "async-waterfall": "^0.1.5",
+    "bluebird": "^3.3.4",
     "commander": ">= 2.9.0",
     "deasync": "^0.1.4",
     "fs-extra": "^0.26.6",
