--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "appsngen-dev-box": "2.0.11",
     "bluebird": "3.3.4",
     "commander": "2.9.0",
+    "easy-table": "1.0.0",
     "fs-extra": "0.26.6",
     "jsonfile": "2.2.3",
     "mkdirp": "0.5.1",
