--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Command Line Interface to interact with AppsNgen API",
   "scripts": {
     "test": "grunt nodeunit",
-    "postinstall": "node postinstall.js",
     "yo": "yo"
   },
   "repository": {
@@ -35,6 +34,7 @@
     "commander": "2.9.0",
     "easy-table": "1.0.0",
     "fs-extra": "0.26.6",
+    "generator-appsngen-web-widget": "0.3.8",
     "jsonfile": "2.2.3",
     "mkdirp": "0.5.1",
     "open": "0.0.5",
