--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "request": "2.69.0",
     "rmdir": "1.2.0",
     "underscore": "1.8.3",
+    "underscore.string": "3.3.4",
     "yo": "1.7.0"
   }
 }
