--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsonfile": "2.2.3",
     "mkdirp": "0.5.1",
     "open": "0.0.5",
+    "progress": "1.1.8",
     "readline-sync": "1.4.1",
     "request": "2.69.0",
     "rmdir": "1.2.0",
