--- a/package.json
+++ b/package.json
@@ -30,22 +30,23 @@
   "homepage": "https://github.com/appsngen/appsngen-cli#readme",
   "dependencies": {
     "appsngen-dev-box": "2.0.11",
-    "appsngen-widget-upload": "0.0.1",
     "appsngen-phonegap-integration": "0.0.1",
+    "appsngen-widget-upload": "0.0.1",
     "archiver": "1.0.0",
     "bluebird": "3.3.4",
     "commander": "2.9.0",
     "easy-table": "1.0.0",
     "fs-extra": "0.26.6",
     "generator-appsngen-web-widget": "0.3.11",
-    "jsonfile": "2.2.3",
     "jscs": "3.0.3",
     "jshint": "2.9.2",
+    "jsonfile": "2.2.3",
     "mkdirp": "0.5.1",
     "open": "0.0.5",
     "progress": "1.1.8",
     "readline-sync": "1.4.1",
     "request": "2.69.0",
+    "string-similarity": "1.1.0",
     "underscore.string": "3.3.4",
     "yo": "1.7.0"
   }
